Fixed mobile overflow and removed console log

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,7 @@ img {
   pointer-events: none;
 }
 
+html,
 body {
   overflow-x: hidden;
 }
